--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -33,5 +33,5 @@ jobs:
             MYSQL_USER=aui
             MYSQL_PASSWORD=i3lab-aui21-mell
             MYSQL_DATABASE=aui
-            AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;AccountName=aui;AccountKey=wIXNZnhQxQGVKoGcR8UXyEZvr7SQZuL6Z2E74cPyA8pzYPYxIm2fisRkHOZue+i6m8FS+acOWTDn+AStsMhLiw==;EndpointSuffix=core.windows.net"
+            AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=aui;AccountKey=wIXNZnhQxQGVKoGcR8UXyEZvr7SQZuL6Z2E74cPyA8pzYPYxIm2fisRkHOZue+i6m8FS+acOWTDn+AStsMhLiw==;EndpointSuffix=core.windows.net
             AZURE_CONTAINER_NAME="uploads"
