changed port to 80

--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -29,6 +29,7 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository }}:latest
           build-args: |
+            PORT=80
             MYSQL_HOST=aui-db
             MYSQL_USER=aui
             MYSQL_PASSWORD=i3lab-aui21-mell
