--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v6.0.0
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Generate swagger file
+        run: node swagger/swagger.js
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
